welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:26: error: value c1 is not a member of object java.awt.Color
  fleur(Color.c1)
              ^FlowerPot:29: error: value c2 is not a member of object java.awt.Color
  fleur(Color.c2)
              ^